@@ -338,6 +338,11 @@ int main(int argc, char **argv) {
 		  printf("\n");
 	  }
 	  
+	  if (config->tearline || config->origin) printf("\n");
+	  if (config->tearline) printf("--- %s\n", config->tearline);
+	  if (config->origin) printf("* Origin: %s (%s)\n",
+								 config->origin, aka2str(config->addr[0]));
+
       printf("\n=== AREAFIX CONFIG ===\n");
 	  printf("areafixFromPkt: %s\n",(config->areafixFromPkt) ? "on": "off");
 	  printf("areafixKillReports: %s\n",(config->areafixKillReports)?"on":"off");
